--- a/AILaw.ipynb
+++ b/AILaw.ipynb
@@ -292,6 +292,7 @@
    "outputs": [],
    "source": [
     "# Extract word vectors\n",
+    "# We will be using the pre-trained Wikipedia 2014 + Gigaword 5 GloVe vectors available at: https://nlp.stanford.edu/data/glove.6B.zip. Pls note the size of these word embeddings is 822 MB",
     "word_embeddings = {}\n",
     "f = open('glove.6B.100d.txt', encoding='utf-8')\n",
     "for line in f:\n",
